--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.19",
-    "@angular/cli": "^19.2.19",
-    "@angular/compiler-cli": "^19.2.17",
+    "@angular/build": "^20.3.12",
+    "@angular/cli": "^20.3.12",
+    "@angular/compiler-cli": "^20.3.15",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.39.1",
@@ -59,22 +59,22 @@
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
-    "ng-packagr": "^19.2.2",
+    "ng-packagr": "^20.3.2",
     "npm-package-json-lint": "^8.0.0",
     "stylelint": "^16.26.1",
     "stylelint-scss": "^6.12.1",
     "tslib": "^2.8.1",
-    "typescript": "~5.5.4",
+    "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0"
   },
   "peerDependencies": {
-    "@angular/animations": "^19.2.16",
-    "@angular/common": "^19.2.16",
-    "@angular/compiler": "^19.2.16",
-    "@angular/core": "^19.2.16",
-    "@angular/forms": "^19.2.16",
+    "@angular/animations": "^20.3.15",
+    "@angular/common": "^20.3.15",
+    "@angular/compiler": "^20.3.15",
+    "@angular/core": "^20.3.15",
+    "@angular/forms": "^20.3.15",
     "@angular/material": "^19.2.19",
-    "@angular/router": "^19.2.16",
+    "@angular/router": "^20.3.15",
     "@ogs-gmbh/ngx-utils": "^1.0.0",
     "rxjs": "~7.8.1"
   },
