--- a/package.json
+++ b/package.json
@@ -1,94 +1,102 @@
 {
-	"name": "@ogs-gmbh/ngx-m3-themes",
-	"version": "1.1.0",
-	"description": "Customizable Angular Material 3 (MDC) themes and helpful SCSS utilities for consistent, modern UI styling in Angular applications.",
-	"keywords": [
-		"light-theme",
-		"angular",
-		"dark-theme",
-		"angular-material",
-		"scss",
-		"theming",
-		"design-system",
-		"angular-theme",
-		"material3"
-	],
-	"homepage": "https://github.com/OGS-GmbH/ngx-m3-themes?tab=readme-ov-file",
-	"bugs": "https://github.com/OGS-GmbH/ngx-m3-themes/issues",
-	"license": "MIT",
-	"author": "OGS GmbH",
-	"contributors": [
-		{
-			"name": "Simon Kovtyk",
-			"email": "simon@kovtyk.com",
-			"url": "https://simonkov.dev"
-		}
-	],
-	"exports": {
-		".": {
-			"sass": "./_public-api.scss"
-		}
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/OGS-GmbH/ngx-m3-themes"
-	},
-	"scripts": {
-		"ci:build:main:production": "ng build --configuration production",
-		"ci:pr:commitlint:main:commitlint": "commitlint",
-		"ci:pr:lint:main:eslint": "eslint .",
-		"prepare": "husky"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.2.12",
-		"@angular/cli": "^18.2.12",
-		"@angular/compiler-cli": "^18.2.13",
-		"@commitlint/cli": "^19.5.0",
-		"@commitlint/config-conventional": "^19.6.0",
-		"@eslint/js": "^9.9.0",
-		"@eslint/json": "^0.6.0",
-		"@eslint/markdown": "^6.2.1",
-		"@ogs-gmbh/linter": "^1.3.2",
-		"npm-package-json-lint": "^8.0.0",
-		"@stylistic/eslint-plugin-js": "^2.10.1",
-		"@stylistic/eslint-plugin-plus": "^2.10.1",
-		"@stylistic/eslint-plugin-ts": "^2.10.1",
-		"angular-eslint": "^18.3.0",
-		"eslint": "^9.9.0",
-		"eslint-plugin-security": "^3.0.1",
-		"eslint-plugin-unicorn": "^56.0.0",
-		"globals": "^15.13.0",
-		"husky": "^9.1.5",
-		"lint-staged": "^15.2.10",
-		"ng-packagr": "^18.2.1",
-		"stylelint": "^16.8.2",
-		"stylelint-scss": "^6.5.0",
-		"tslib": "^2.8.1",
-		"typescript": "~5.5.4",
-		"typescript-eslint": "^8.2.0"
-	},
-	"peerDependencies": {
-		"@angular/animations": "^18.2.1",
-		"@angular/common": "^18.2.1",
-		"@angular/compiler": "^18.2.1",
-		"@angular/core": "^18.2.1",
-		"@angular/forms": "^18.2.1",
-		"@angular/material": "^18.2.1",
-		"@angular/router": "^18.2.1",
-		"@ogs-gmbh/ngx-utils": "^1.0.0",
-		"rxjs": "~7.8.1"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"@parcel/watcher",
-			"esbuild",
-			"lmdb",
-			"msgpackr-extract",
-			"nice-napi"
-		]
-	},
-	"sideEffects": false,
-	"publishConfig": {
-		"directory": "dist/prod"
-	}
+  "name": "@ogs-gmbh/ngx-m3-themes",
+  "version": "1.1.0",
+  "description": "Customizable Angular Material 3 (MDC) themes and helpful SCSS utilities for consistent, modern UI styling in Angular applications.",
+  "keywords": [
+    "light-theme",
+    "angular",
+    "dark-theme",
+    "angular-material",
+    "scss",
+    "theming",
+    "design-system",
+    "angular-theme",
+    "material3"
+  ],
+  "homepage": "https://github.com/OGS-GmbH/ngx-m3-themes?tab=readme-ov-file",
+  "bugs": "https://github.com/OGS-GmbH/ngx-m3-themes/issues",
+  "license": "MIT",
+  "author": "OGS GmbH",
+  "contributors": [
+    {
+      "name": "Simon Kovtyk",
+      "email": "simon@kovtyk.com",
+      "url": "https://simonkov.dev"
+    }
+  ],
+  "exports": {
+    ".": {
+      "sass": "./_public-api.scss"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OGS-GmbH/ngx-m3-themes"
+  },
+  "scripts": {
+    "ci:build:main:production": "ng build --configuration production",
+    "ci:docs:extract:sassdoc": "sassdoc ./src -p > ./sassdoc.json && node ./prepare-sassdoc.js",
+    "ci:docs:main:vitepress": "vitepress build .vitepress",
+    "ci:pr:commitlint:main:commitlint": "commitlint",
+    "ci:pr:lint:main:eslint": "eslint .",
+    "prepare": "husky",
+    "vitepress": "vitepress dev .vitepress",
+    "vitepress:preview": "vitepress preview .vitepress"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^18.2.12",
+    "@angular/cli": "^18.2.12",
+    "@angular/compiler-cli": "^18.2.13",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.9.0",
+    "@eslint/json": "^0.6.0",
+    "@eslint/markdown": "^6.2.1",
+    "@ogs-gmbh/linter": "^1.3.2",
+    "@stylistic/eslint-plugin-js": "^2.10.1",
+    "@stylistic/eslint-plugin-plus": "^2.10.1",
+    "@stylistic/eslint-plugin-ts": "^2.10.1",
+    "angular-eslint": "^18.3.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "globals": "^15.13.0",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.10",
+    "ng-packagr": "^18.2.1",
+    "npm-package-json-lint": "^8.0.0",
+    "sassdoc": "^2.7.4",
+    "stylelint": "^16.8.2",
+    "stylelint-scss": "^6.5.0",
+    "tslib": "^2.8.1",
+    "typedoc": "^0.28.15",
+    "typescript": "~5.5.4",
+    "typescript-eslint": "^8.2.0",
+    "vitepress": "2.0.0-alpha.15",
+    "vitepress-plugin-group-icons": "^1.6.5"
+  },
+  "peerDependencies": {
+    "@angular/animations": "^18.2.1",
+    "@angular/common": "^18.2.1",
+    "@angular/compiler": "^18.2.1",
+    "@angular/core": "^18.2.1",
+    "@angular/forms": "^18.2.1",
+    "@angular/material": "^18.2.1",
+    "@angular/router": "^18.2.1",
+    "@ogs-gmbh/ngx-utils": "^1.0.0",
+    "rxjs": "~7.8.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "esbuild",
+      "lmdb",
+      "msgpackr-extract",
+      "nice-napi"
+    ]
+  },
+  "sideEffects": false,
+  "publishConfig": {
+    "directory": "dist/main"
+  }
 }
